--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
-# Any external dependencies will be listed below
+# external dependencies are listed below
+
+requests~=2.32.3
+DateTime~=5.5
+colorama~=0.4.6
